# k49-deep-learning-classification

./: .gitignore  README.md  main.py  pyproject.toml
functions/: __init__.py  ann.py  cnn.py  ensemble.py  keras_training.py  keras_tuner.py  main_utils.py  paths.py  transfer_learning.py  utils.py
results/: ADVANCED_CNN_report.txt  ANN_ENSEMBLE_report.txt  DEEP_ANN_report.txt  KERAS_TUNER_report.txt  MIXED_ENSEMBLE_report.txt  MIXUP_CNN_report.txt  PYTORCH_ANN_report.txt  RESIDUAL_CNN_report.txt  SIMPLE_ANN_report.txt  TL_RESNET50V2_report.txt  TL_YOLOV8_report.txt
versions/: c01_simple_ann.py  c02_deep_ann.py  c03_cnn.py  c04_pytorch_ann.py  c05_ann_ensemble.py  c06_tl_resnet.py  c07_keras_tuner.py  c08_residual_cnn.py  c09_mixup_cnn.py  c10_tl_yolov8.py  c11_mixed_ensemble.py
