[project]
name = "project-ann-2026"
version = "0.1.0"
requires-python = ">=3.11.9,<3.13"
dependencies = [
    "keras-tuner>=1.4.8",
    "numpy==1.26.4",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
    "torch>=2.12.0",
    "torchvision",
    "torchaudio",
    "ultralytics>=8.4.58",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "opencv-python-headless<4.13.0",
    "tensorboard>=2.20.0",
]

[project.optional-dependencies]
# Activates CUDA drivers for NVIDIA GPUs.
# Run with: uv sync --extra cuda
cuda = [
    "tensorflow[and-cuda]>=2.21.0"
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]